RESOLVED FIXED122570
[CSS Shapes] Lines that don't intersect shape-outside should ignore both left and right margins
https://bugs.webkit.org/show_bug.cgi?id=122570
Summary [CSS Shapes] Lines that don't intersect shape-outside should ignore both left...
Bem Jones-Bey
Reported 2013-10-09 13:25:35 PDT
[CSS Shapes] Lines that don't intersect shape-outside should ignore both left and right margins
Attachments
Patch (8.98 KB, patch)
2013-10-09 13:30 PDT, Bem Jones-Bey
no flags
Patch (7.81 KB, patch)
2013-10-09 15:15 PDT, Bem Jones-Bey
no flags
Bem Jones-Bey
Comment 1 2013-10-09 13:30:45 PDT
Bem Jones-Bey
Comment 2 2013-10-09 15:15:55 PDT
Created attachment 213820 [details] Patch Added a comment as requested, and rebased
Alexandru Chiculita
Comment 3 2013-10-09 15:28:43 PDT
Comment on attachment 213820 [details] Patch Thanks for the comment Bem. r=me
WebKit Commit Bot
Comment 4 2013-10-09 15:53:29 PDT
Comment on attachment 213820 [details] Patch Clearing flags on attachment: 213820 Committed r157192: <http://trac.webkit.org/changeset/157192>
WebKit Commit Bot
Comment 5 2013-10-09 15:53:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.