[CSS Shapes] Lines that don't intersect shape-outside should ignore both left and right margins https://bugs.webkit.org/show_bug.cgi?id=122570

Reviewed by Alexandru Chiculita.

Source/WebCore:

Due to an oversight, the left margin on left floats and the right
margin on right floats was having an effect on lines that did not
intersect the shape (but did intersect the margin box of the float).
By the spec, lines that do not intersect the shape should act as if
the float isn't there, so those margins should have no effect on
those lines. This patch fixes this.

No new tests, it is covered by the existing tests now that they have
been fixed to have the proper behavior.

* rendering/shapes/ShapeOutsideInfo.cpp:
(WebCore::ShapeOutsideInfo::updateDeltasForContainingBlockLine):

LayoutTests:

Update tests to work with the proper behavior for margins. Yes, the
tests were not correct before.

* csswg/contributors/adobe/submitted/shapes/shape-outside/resources/w3c-import.log:
* csswg/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-margin-000.html:
* csswg/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-margin-007.html:
* csswg/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-margin-009.html:
* csswg/contributors/adobe/submitted/shapes/shape-outside/w3c-import.log:
* fast/shapes/shape-outside-floats/shape-outside-floats-different-writing-modes.html:


Canonical link: https://commits.webkit.org/140661@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157192 268f45cc-cd09-0410-ab3c-d52691b4dbfc